Finish part 0 edit pass

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/5-reference/1-programs.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/5-reference/1-programs.mdx
@@ -15,10 +15,10 @@ In the video below, Steve Jobs, the co-founder of Apple, describes the computer 
   <YouTube id="ob_GX50Za6c" params="fs=1&start=25&modestbranding=1&rel=0"/>
 </div>
 
-Programs allow you to instruct the computer to build a reality - a conceptual model that contains the things you need to make the program do what you want. In a way, a program is a conceptual machine (a bicycle for the mind) with imaginary parts that can perform actions and interact with the real world. This conceptual machine accelerates the capability of your mind to a new level, just like a bicycle does for human movement.
+Programs allow you to instruct the computer to build a reality -- a conceptual model that contains the things you need to make the program do what you want. In a way, a program is a conceptual machine (a bicycle for the mind) with imaginary parts that can perform actions and interact with the real world. This conceptual machine accelerates the capability of your mind to a new level, just like a bicycle does for human movement.
 
-Within programs, you build the *things* you need to achieve your objectives. These *things* are built upon information and instructions which can modify that information based on external stimuli. Programs can receive **inputs** from the real world with devices like buttons, mice, and sensors turning real-world information into digital values that can be used. Motors, displays, speakers, and other devices enable programs to then change things within the real world - we can think of these changes as the **outputs** of the program.
+Within programs, you build the *things* you need to achieve your objectives. These *things* are built upon information and instructions which can modify that information based on external stimuli. Programs can receive **inputs** from the real world with devices like buttons, mice, and sensors turning real-world information into digital values that can be used. Motors, displays, speakers, and other devices enable programs to then change things within the real world. We can think of these changes as the **outputs** of the program.
 
-This capability makes computers very useful. If we can imagine a useful digital reality, and create this using programming tools, then this reality will exist within the computers running your program. Your code will get the computer to respond in meaningful ways to inputs, and generate meaningful changes in the real world (outputs).
+This capability makes computers very useful. If we can imagine a useful digital reality and create this using programming tools, then this reality will exist within the computers running our program. Your code will get the computer to respond in meaningful ways to inputs, and generate meaningful changes in the real world (outputs).
 
 *Learning to program will give you the skills and tools needed to create digital realities, giving you the tools to shape and harness the bicycle for the mind!*
