--- a/src/content/docs/book/part-0-getting-started/1-building-programs/5-reference/6-source-code.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/5-reference/6-source-code.mdx
@@ -4,7 +4,9 @@ sidebar:
     label: Source Code
 ---
 
-The next step in programming language was to make languages even more human readable. These languages, known as **third generation languages**, use more advanced programs than assemblers to convert their instructions into machine code. The code that a programmer writes in these languages is called **source code**. Programs written in these languages are converted to machine code by a **compiler** or **interpreter**.
+import { Steps } from '@astrojs/starlight/components';
+
+The next step in programming languages was to make them even more human-readable. These languages, known as **third generation languages**, use more advanced programs than assemblers to convert their instructions into machine code. The code that a programmer writes in these languages is called **source code**, which is converted to machine code by a **compiler** or **interpreter**.
 
 ## Compilers and Interpreters
 
@@ -18,10 +20,12 @@ To run a program written in an interpreted language, you need to run the interpr
 In this journey we will focus on compiled languages.
 Internally, a compiler will perform a number of steps:
 
+<Steps>
 1. **Preprocessing**: The compiler reads your code. This may involve some processing to do things like ignoring comments, which are notes written in your code files for the benefit of programmers.
 2. **Compiling**: The compiler converts your code into assembly instructions and outputs an assembly program.
 3. **Assembling**: The assembly program is converted into machine code and stored in **object files**.
 4. **Linking**: The compiler uses a **linker**, which is another program, to join together the machine code of your program with other machine code from any **programming libraries** your program refers to. It then outputs an executable program.
+</Steps>
 
 :::note
 A **programming library** is a collection of code that is distributed for others to use.
@@ -34,8 +38,7 @@ At the end of this process you have an executable that you can run on your compu
 
 ## Programming with a Third Generation Language
 
-The following snippet is the source code for a small program that can be used to output a message
-to the command line.
+The following snippet is the source code for a small program that can be used to output a message to the command line.
 
 ```cpp
 #include "splashkit.h"
@@ -46,8 +49,8 @@ int main()
 }
 ```
 
-When compiled, this C++ program generates the assembler code and machine code shown in the previous code snippets. This code must be converted by the C++ compiler into machine code before it can be run. It is interesting to note the size of the C++ file: it is only 50 bytes! The compiler converts this 50 bytes into the 13,344 bytes of machine code.
+When compiled, this C++ program generates the assembler code and machine code shown in the previous code snippets. This code must be converted by the C++ compiler into machine code before it can be run. It is interesting to note the size of the C++ file: it is only 50 bytes! The compiler converts these 50 bytes into 13,344 bytes of machine code.
 
-Most modern programming languages are third generation languages. Programs written in a third generation programming language are much easier for us to understand than their assembler or machine code equivalents. Source code is also a more portable form of code, as it can be compiled to run on different types of CPU. 
+Most modern programming languages are third generation languages. Programs written in a third generation programming language are much easier for us to understand than their assembler or machine code equivalents. Source code is also a more portable form of code, as it can be compiled to run on different types of CPU.
 
 Typically, source code is saved into a text file with a file extension that helps identify the language it is written in. For example, programs written in the C++ language are saved into files with a `.cpp` file extension. C# programs are saved into files with a `.cs` extension, Python in `.py` and so on.
